compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/classObject.kt
class C {
    <!CONFLICTING_JVM_DECLARATIONS!>class object<!> {}

    <!CONFLICTING_JVM_DECLARATIONS!>val `OBJECT$`<!> = C
}